syntax = "proto3";

package hello;

// 定义一个简单的请求消息
message HelloRequest {
  string name = 1;
}

// 定义一个简单的响应消息
message HelloResponse {
  string message = 1;
  int32 status = 2;
}

// 定义一个流式请求消息
message StreamRequest {
  string query = 1;
}

// 定义一个流式响应消息
message StreamResponse {
  string result = 1;
  int32 count = 2;
}

// 定义Hello服务
service HelloService {
  // 一元RPC - 客户端发送一个请求并获得一个响应
  rpc SayHello(HelloRequest) returns (HelloResponse) {}
  
  // 服务器流式RPC - 客户端发送一个请求并获得一个响应流
  rpc GetServerStream(StreamRequest) returns (stream StreamResponse) {}
}